--- a/.env
+++ b/.env
@@ -10,7 +10,7 @@ POSTGRES_CONTAINER_PORT=5432
 POSTGRES_HOSTNAME=postgres-primary-db
 POSTGRES_USER=zbuzzeo
 POSTGRES_PASSWORD=password
-POSTGRES_DB=zbuzzeo
+POSTGRES_DB=react_kanban
 
 REDIS_HOST_PORT=6379
 REDIS_CONTAINER_PORT=6379
