--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "kanban",
   "version": "0.0.1",
   "private": true,
+  "proxy": "http://localhost:8080",
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
