--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "pg": "^7.8.0",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
-    "react-scripts": "2.1.5"
+    "react-redux": "^6.0.0",
+    "react-scripts": "2.1.5",
+    "redux": "^4.0.1"
   },
   "scripts": {
     "dev": "./node_modules/nodemon/bin/nodemon.js ./server/server.js",
