Upgrade Board to class component. Define Header component

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gulp-sass": "^4.0.2",
     "gulp-watch": "^5.0.1",
     "knex": "^0.13.0",
+    "node-sass": "^4.11.0",
     "nodemon": "^1.18.10",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
