--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "pg": "^7.8.0",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
+    "react-modal": "^3.8.1",
     "react-redux": "^6.0.0",
     "react-scripts": "2.1.5",
     "redux": "^4.0.1"
