--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-modal": "^3.8.1",
     "react-redux": "^6.0.0",
     "react-scripts": "2.1.5",
-    "redux": "^4.0.1"
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "dev": "./node_modules/nodemon/bin/nodemon.js ./server/server.js",
