Changes to server, environment, migrations, and board component

--- a/.env.sample
+++ b/.env.sample
@@ -1,10 +1,4 @@
-UPDATE_YOUR_ENV_WITH_THIS_INFORMATION
-
-POSTGRES_HOSTNAME=
-POSTGRES_USER=
-POSTGRES_PASSWORD=
-POSTGRES_DB=
-
+# UPDATE_YOUR_ENV_WITH_THIS_INFORMATION
 
 DOCKERHUB_NAME=
 IMAGE_NAME=docker-express-server
@@ -20,5 +14,6 @@ POSTGRES_USER=
 POSTGRES_PASSWORD=
 POSTGRES_DB=
 
+REDIS_HOST=
 REDIS_HOST_PORT=
 REDIS_CONTAINER_PORT=
