--- a/.env
+++ b/.env
@@ -12,5 +12,6 @@ POSTGRES_USER=zbuzzeo
 POSTGRES_PASSWORD=password
 POSTGRES_DB=react_kanban
 
+REDIS_HOST=redis://redis-server
 REDIS_HOST_PORT=6379
 REDIS_CONTAINER_PORT=6379
