--- a/.env
+++ b/.env
@@ -15,3 +15,5 @@ POSTGRES_DB=react_kanban
 REDIS_HOST=redis://redis-server
 REDIS_HOST_PORT=6379
 REDIS_CONTAINER_PORT=6379
+
+PROJECT_ENVIRONMENT = DEVELOPMENT
