--- a/.env
+++ b/.env
@@ -16,4 +16,5 @@ REDIS_HOST=redis://redis-server
 REDIS_HOST_PORT=6379
 REDIS_CONTAINER_PORT=6379
 
-PROJECT_ENVIRONMENT = DEVELOPMENT
+SESSION_SECRET=keyboard cat
+PROJECT_ENV=development
